<resources>
    <!--IMC Calculator-->
    <string name="app_name">AndroidMaster</string>
    <string name="femalevenus">femaleVenus</string>
    <string name="female">Mujer</string>
    <string name="maleVenus">maleVenus</string>
    <string name="male">Hombre</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="initialCm">120 cm</string>
    <string name="initialWeight">30 kg</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu Resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="title_under_weight">Bajo peso</string>
    <string name="description_under_weight">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_normal_weight">Peso normal</string>
    <string name="description_normal_weight">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_overweight">Sobrepeso</string>
    <string name="description_overweight">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesity_weight">Obesidad</string>
    <string name="description_obesity_weight">Estás muy por encima de lo óptimo para tu peso y altura.</string>

    <string name="error">Error</string>
    <string name="SaludAPP">SaludAPP</string>
    <string name="IMC_Calculator">Calculadora de IMC</string>
    <string name="Agenda">Agenda personal</string>
    <string name="SuperheroApp">Superhero App</string>
    <string name="greetings">¡Hola! Elije la aplicación a la que deseas ingresar</string>
    <string name="other">Otro</string>

    <!--TODOApp-->
    <string name="todo_title">Bienvenidos</string>
    <string name="todo_categories">Categorías: </string>
    <string name="todo_categorie_business">Negocios</string>
    <string name="todo_categorie_personal">Personal</string>
    <string name="todo_categorie_piano">Piano</string>
    <string name="todo_categorie_training">Entrenamiento</string>
    <string name="todo_categorie_other">Otros</string>
    <string name="todo_tasks">Tareas</string>
    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_create_task">Crear tarea</string>
</resources>