<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/imc_title_text"
    android:padding="20dp"
    tools:context=".aristidevs.exercises.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp">

    </TextView>

    <Button
        android:id="@+id/btnSaludApp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:backgroundTint="#D11F5C"
        android:layout_height="wrap_content"
        android:text="@string/SaludAPP">
    </Button>

    <Button
        android:id="@+id/btnIMCCalculatorApp"
        android:backgroundTint="#072251"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IMC_Calculator">
    </Button>

    <Button
        android:id="@+id/btnTODOApp"
        android:backgroundTint="#1064AE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Agenda">
    </Button>

    <Button
        android:id="@+id/btnSuperheroApp"
        android:backgroundTint="#3AA836"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SuperheroApp">
    </Button>

</LinearLayout>